--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,12 +19,16 @@ img {
     left: 40%;
 }
 
+.active {
+    border: 2px solid white;
 
+}
 
- img:not(.active) {
+img:not(.active) {
+    filter: opacity(0.5);
+}
+
+ /* img:not(.active) {
     display: none;
  }
-
- img {
-    width: 500px
- }
+ */
