--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,9 @@
 img {
     max-width: 100%;
+    max-height: 100%;
 }
+
+
 
 .centred {
     position: absolute;
@@ -26,6 +29,15 @@ img {
 
 }
 
+.images img {
+    height: calc(100%/5);
+
+}
+
+.current_image img {
+    max-height: 400px;
+}
+
 .images img:not(.active) {
     filter: opacity(0.5);
 }
@@ -33,4 +45,5 @@ img {
  .current_image img:not(.show) {
     display: none;
  }
+
 
